--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ahmet Koca - Cross Platform Developer with Flutter</title>
+  <title>Ahmet Koca - Bilgisayar Mühendisi</title>
   
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Ahmet Koca - Flutter ile Cross Platform Developer portfolyo sitesi. Mobil uygulama geliştirme, Web Development ve diğer projelerimi inceleyin.">
-  <meta name="keywords" content="Ahmet Koca, Cross Platform Developer, Flutter Developer, Mobile Developer, Web Developer, Dart, React, JavaScript, Portfolio">
+  <meta name="description" content="Ahmet Koca - Bilgisayar Mühendisi portfolyo sitesi. Flutter ile mobil uygulama geliştirme, Web Development, Backend Development ve diğer projelerimi inceleyin.">
+  <meta name="keywords" content="Ahmet Koca, Bilgisayar Mühendisi, Flutter Developer, Mobile Developer, Web Developer, Backend Developer, Dart, React, JavaScript, Portfolio">
   <meta name="author" content="Ahmet Koca">
   
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Ahmet Koca - Cross Platform Developer with Flutter">
-  <meta property="og:description" content="Ahmet Koca - Flutter ile Cross Platform Developer portfolyo sitesi. Mobil uygulama geliştirme, Web Development ve diğer projelerimi inceleyin.">
+  <meta property="og:title" content="Ahmet Koca - Bilgisayar Mühendisi">
+  <meta property="og:description" content="Ahmet Koca - Bilgisayar Mühendisi portfolyo sitesi. Flutter ile mobil uygulama geliştirme, Web Development, Backend Development ve diğer projelerimi inceleyin.">
   <meta property="og:image" content="./assets/images/my-avatar.png">
-  <meta property="og:url" content="https://ahmetkocaportfolio.vercel.app/">
+  <meta property="og:url" content="https://ahmet-koca-portfolio.vercel.app/">
   
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Ahmet Koca - Cross Platform Developer with Flutter">
-  <meta name="twitter:description" content="Ahmet Koca - Flutter ile Cross Platform Developer portfolyo sitesi. Mobil uygulama geliştirme, Web Development ve diğer projelerimi inceleyin.">
+  <meta name="twitter:title" content="Ahmet Koca - Bilgisayar Mühendisi">
+  <meta name="twitter:description" content="Ahmet Koca - Bilgisayar Mühendisi portfolyo sitesi. Flutter ile mobil uygulama geliştirme, Web Development, Backend Development ve diğer projelerimi inceleyin.">
   <meta name="twitter:image" content="./assets/images/my-avatar.png">
 
   <!-- Favicon -->
@@ -86,7 +86,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:kocaahmetkoca32@gmail.com" class="contact-link">kocaahmetkoca32@gmail.com</a>
+              <a href="mailto:ahmetkoca.dev@gmail.com" class="contact-link">ahmetkoca.dev@gmail.com</a>
             </div>
 
           </li>
@@ -128,7 +128,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Merkez, Isparta, Türkiye</address>
+              <address>Isparta / Türkiye</address>
             </div>
 
           </li>
@@ -610,20 +610,29 @@
             </li>
 
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">TÜBİTAK STING Projesi</h4>    
-              <span>Süleyman Demirel Üniversitesi | PI: Dr. Utku KOSE | TÜBİTAK 1001 Projesi</span>
+              <h4 class="h4 timeline-item-title">TÜBİTAK STING Projesi, Frontend Geliştirici & Araştırmacı</h4>    
+              <span>Süleyman Demirel Üniversitesi, Türkiye | PI: Dr. Utku KOSE | TÜBİTAK 1001 Projesi</span>
               <span>Şubat 2025 - Devam Ediyor</span>
               <p class="timeline-text">
-                Projede Flutter ile mobil arayüz tasarımına katkı sağlıyorum, FastAPI ile geliştirilen RESTful mimarideki API üzerinden veri iletişimi gerçekleştiriyorum. Ayrıca, makine öğrenmesi algoritmaları üzerine çalışmalar yapıyor ve bu algoritmaların gerçek dünya uygulamalarını araştırıyorum. Çok disiplinli bir ekip ile iş birliği içinde proje hedeflerine ulaşmaya çalışıyorum.
+                Projede sistemin Flutter tabanlı web uygulamasını geliştiriyorum. Backend tarafında FastAPI ile RESTful mimari kullanarak veri iletişimi, matematiksel model çalıştırma, GNN çalıştırma gibi yapılar üzerine kafa yorarak optimize çarşısın bir yapı oluşturdum. GNN modeli geliştirilirken kendi isteğim ile yardım ederek GNN ile ilgili derinlemesine tecrübe edinme şansı buldum. Tüm aşamaların çıktılarına göre UI ve UX gibi önemli kısımları titizlikle geliştiriyorum.
               </p>
             </li>
 
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Co-Founder & Flutter Developer</h4>    
+              <h4 class="h4 timeline-item-title">Flutter Developer & Kurucu Ortak</h4>    
               <span>Konwoy</span>
-              <span>Şubat 2025 - Devam Ediyor</span>
+              <span>Şubat 2025 - Kasım 2025</span>
               <p class="timeline-text">
-                Erken aşama bir girişim olan Konwoy'da Co-Founder ve Flutter Developer olarak görev alıyorum. Mobil uygulamanın tüm geliştirme süreçlerinde Flutter ile aktif rol alıyor, ürün stratejisi ve kullanıcı deneyimi tasarımına katkı sağlıyorum. Modern teknolojileri kullanarak kullanıcıların günlük yaşamını kolaylaştıracak yenilikçi çözümler üretiyoruz.
+                Konwoy bünyesinde Kurucu Ortak ve Flutter Developer olarak özel şoför kiralama adı altında lojistik süreçlere sahip mobil uygulamanın MVP geliştirme aşamasını yönettim. Provider mimarisi ile state management süreçlerini kurgulayarak kullanıcı ve rezervasyon yapısını merkezi bir yapıda optimize ettim, Firebase servisleri ile gerçek zamanlı veri ve bildirim sistemlerini entegre ettim. Google Maps API üzerinden canlı konum takibi ve dinamik fiyatlandırma modüllerini geliştirirken, Selector ve Consumer yapılarını kullanarak gereksiz widget rebuild'lerini engelledim ve render performansını arttırdım. Teknik altyapının yanı sıra ürün vizyonu süreçlerinde aktif rol aldım.
+              </p>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Flutter Developer Intern</h4>    
+              <span>Newky (Texinsight Teknoloji A.Ş.)</span>
+              <span>Haziran 2025 - Ağustos 2025</span>
+              <p class="timeline-text">
+                Newky bünyesinde Flutter Developer Stajyeri olarak, MVVM mimarisi ve Provider state management yapısını kullanarak 9 ekranlık bir uygulama akışının UI ve logic süreçleri üzerine çalıştım. Go-router ile merkezi bir navigasyon altyapısı kurarak Google Maps API üzerinden canlı konum takibi ve QR Code Scanner modüllerini uygulamaya entegre ettim. Geliştirme sürecinde flutter_hooks ile performans optimizasyonu ve MediaQuery ile responsive konuları üzerine ayrıca dikkat ettim. Proje yönetim sürecini ise Agile(Kanban) metodoloji ile Jira üzerinden takip ettim.
               </p>
             </li>
 
@@ -835,6 +844,34 @@
             </li>
 
           </ul>
+
+        </section>
+
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="trophy-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Ödüller</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Next2Green Tasarım Yarışması – Üniversite Kategorisi Birinciliği</h4>
+
+              <span>Ekim 2025</span>
+
+              <p class="timeline-text">
+                Next2Green Tasarım Yarışması'nda üniversite kategorisinde birincilik ödülü kazandım.
+              </p>
+
+            </li>
+
+          </ol>
 
         </section>
 
@@ -1113,7 +1150,7 @@
             </li>
 
             <li class="project-item active" data-filter-item data-category="web-development">
-              <a href="https://ahmetkocaportfolio.vercel.app/" target="_blank" rel="noopener noreferrer">
+              <a href="https://ahmet-koca-portfolio.vercel.app/" target="_blank" rel="noopener noreferrer">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
